--- a/builder.html
+++ b/builder.html
@@ -19,12 +19,12 @@
     </div>
 
     <div class="mode-card" onclick="openEditor('scratch')">
-      <h2>Scratch Mode</h2>
+      <h2>Scratch Mode (Under Construction🏗)</h2>
       <p>Drag & Drop logic blocks. No coding needed.</p>
     </div>
 
     <div class="mode-card" onclick="openEditor('pwa')">
-      <h2>PWA Mode</h2>
+      <h2>PWA Mode (Under Construction🏗)</h2>
       <p>Start building a Progressive Web App with service workers.</p>
     </div>
   </main>
